# aula18_aovivo

./: README.md  pyproject.toml
src/: pokemon.db  schema.py
